Fix broken VR transitions due to ChromeTabbedActivity not being exported.

Recently, VR transitions broke due to us properly registering as a VR capable app. For some reason this lead VrCore to handle us differently and try launching ChromeTabbedActivity, which it couldn't because it's not exported.

This CL updates our transition code to use the new daydream API calls, giving us enter and exit VR transitions. I also introduce an activity-alias for VR purposes so that VrCore can call back into us after the VR DON flow completes.

BUG=665006

Review-Url: https://codereview.chromium.org/2500153003
Cr-Commit-Position: refs/heads/master@{#432727}

Former-commit-id: d7d11fc27adf47033a732dc446f87ac55d29f53a