chrome/android/java/src/org/chromium/chrome/browser/vr_shell/VrDaydreamApi.java
@@ -5,6 +5,8 @@
 package org.chromium.chrome.browser.vr_shell;
 
 import android.app.PendingIntent;
+import android.content.ComponentName;
+import android.content.Intent;
 
 /**
  * Abstract away DaydreamImpl class, which may or may not be present at runtime depending on compile
@@ -14,7 +16,7 @@ public interface VrDaydreamApi {
     /**
      * Register the intent to launch after phone inserted into a Daydream viewer.
      */
-    void registerDaydreamIntent(PendingIntent pendingIntent);
+    void registerDaydreamIntent(final PendingIntent pendingIntent);
 
     /**
      * Unregister the intent if any.
@@ -22,7 +24,23 @@ public interface VrDaydreamApi {
     void unregisterDaydreamIntent();
 
     /**
-     * Close the private api.
+     * Create an Intent to launch a VR activity with the given component name.
      */
-    void close();
+    Intent createVrIntent(final ComponentName componentName);
+
+    /**
+     * Launch the given Intent in VR mode.
+     */
+    void launchInVr(final PendingIntent pendingIntent);
+
+    /**
+     * @param requestCode The requestCode used by startActivityForResult.
+     * @param intent The data passed to VrCore as part of the exit request.
+     */
+    void exitFromVr(int requestCode, final Intent intent);
+
+    /**
+     * Sets VR Mode to |enabled|.
+     */
+    void setVrModeEnabled(boolean enabled);
 }
